[gd_scene load_steps=6 format=3 uid="uid://bkgl5v8ijl362"]

[ext_resource type="Script" path="res://scripts/Menu scripts/main_menu.gd" id="1_07eop"]
[ext_resource type="FontFile" uid="uid://bkmn2h3knu02d" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_4vmwg"]
[ext_resource type="Texture2D" uid="uid://b47355i5hrilt" path="res://assets/sprites/pixelart_starfields/pixelart_starfield_diagonal_diffraction_spikes.png" id="2_mneb7"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="2_u77s2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_an5hx"]
shader = ExtResource("2_u77s2")
shader_parameter/speed = 0.05

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.67999, 2.92)
script = ExtResource("1_07eop")

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_an5hx")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -152.0
offset_right = 217.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mneb7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -13.3562
offset_right = 64.0
offset_bottom = 94.6438
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Settings"

[node name="Extras" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Extras"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -157.5
offset_top = -75.0
offset_right = 157.5
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4vmwg")
theme_override_font_sizes/font_size = 30
text = "SPACE CHASE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
